Added link to colab notepads in repository

--- a/colab_notepads/tacotron2/tacotron2_synthesis.ipynb
+++ b/colab_notepads/tacotron2/tacotron2_synthesis.ipynb
@@ -12,6 +12,8 @@
         "\n",
         "Link do oryginalnego notatnika: https://colab.research.google.com/drive/1HLtvXS1X1mChiXHM02myLz3SUhzJ4bqx\n",
         "\n",
+        "Link do źródła w repozytorium: https://github.com/8tm/mekatron-files/blob/master/colab_notepads/tacotron2/tacotron2_synthesis.ipynb\n",
+        "\n",
         "Połączenie wszystkiego, co do tej pory powstało na Mekatronie. Podziękowania dla:\n",
         "- Meka\n",
         "- Adam is cool and stuff – za orginalną wersję tacotronową\n",
@@ -21,15 +23,6 @@
         "- Patryk025 - za poprawki w hifi-gan i jeszcze kilka rzeczy\n",
         "\n",
         "Obecnie notatnik posiada drobny błąd – przy pierwszej syntezie po uruchomieniu tego Colaba skrypt \"zagraniczny_głos\" nie załapuje, więc trzeba jeszcze raz wygenerować. Wszystkie kolejne generacje są już OK. Jak ktoś zna się na programowaniu, to może pomóc mi w naprawie tego błędu."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dR-qb_cr3A_I"
-      },
-      "source": [
-        "----------------------------------------------------------------"
       ]
     },
     {
