--- a/colab_notepads/tacotron2/tacotron2_training.ipynb
+++ b/colab_notepads/tacotron2/tacotron2_training.ipynb
@@ -5,7 +5,9 @@
       "source": [
         "**Właściciel tego notatnika: Tadejro**\n",
         "\n",
-        "Link do oryginalnego notatnika: https://colab.research.google.com/drive/18ykX7r5lFYSlHEAjiNfbfWyIex7WRYpk?usp=sharing"
+        "Link do oryginalnego notatnika: https://colab.research.google.com/drive/18ykX7r5lFYSlHEAjiNfbfWyIex7WRYpk?usp=sharing\n",
+        "\n",
+        "Link do źródła w repozytorium: https://github.com/8tm/mekatron-files/blob/master/colab_notepads/tacotron2/tacotron2_training.ipynb"
       ],
       "metadata": {
         "id": "jA6cm9R09RN4"
