Extension is now case insensitive during mel generation

--- a/colab_notepads/tacotron2/tacotron2_training.ipynb
+++ b/colab_notepads/tacotron2/tacotron2_training.ipynb
@@ -2,16 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jA6cm9R09RN4"
+      },
       "source": [
         "**Właściciel tego notatnika: Tadejro**\n",
         "\n",
         "Link do oryginalnego notatnika: https://colab.research.google.com/drive/18ykX7r5lFYSlHEAjiNfbfWyIex7WRYpk?usp=sharing\n",
         "\n",
         "Link do źródła w repozytorium: https://github.com/8tm/mekatron-files/blob/master/colab_notepads/tacotron2/tacotron2_training.ipynb"
-      ],
-      "metadata": {
-        "id": "jA6cm9R09RN4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -209,9 +209,11 @@
         "        melspec = torch.squeeze(melspec, 0).cpu().numpy()\n",
         "        np.save(filename.replace('.wav', ''), melspec)\n",
         "\n",
-        "    wavs = glob.glob('wavs/*.wav')\n",
-        "    for i in tqdm(wavs):\n",
-        "        save_mel(i)\n",
+        "    files = glob.glob('wavs/*.*')\n",
+        "    for i in tqdm(files):\n",
+        "        filename, extension = os.path.splitext(i)\n",
+        "        if extension.lower() == '.wav':\n",
+        "            save_mel(i)\n",
         "\n",
         "\n",
         "def reduce_tensor(tensor, n_gpus):\n",
@@ -618,7 +620,7 @@
         "\n",
         "\n",
         "# ---- Replace .wav with .npy in filelists ----\n",
-        "!sed -i -- 's,.wav|,.npy|,g' filelists/*.txt\n",
+        "!sed -i -- 's,.wav|,.npy|,Ig' filelists/*.txt\n",
         "# ---- Replace .wav with .npy in filelists ----\n",
         "\n",
         "n_gpus=1\n",
