Fixed saving mels

--- a/colab_notepads/tacotron2/tacotron2_training.ipynb
+++ b/colab_notepads/tacotron2/tacotron2_training.ipynb
@@ -207,7 +207,9 @@
         "        audio_norm = torch.autograd.Variable(audio_norm, requires_grad=False)\n",
         "        melspec = stft.mel_spectrogram(audio_norm)\n",
         "        melspec = torch.squeeze(melspec, 0).cpu().numpy()\n",
-        "        np.save(filename.replace('.wav', ''), melspec)\n",
+        "        \n",
+        "        filename = filename.rsplit('.', 1)[0]\n",
+        "        np.save(filename, melspec)\n",
         "\n",
         "    files = glob.glob('wavs/*.*')\n",
         "    for i in tqdm(files):\n",
